--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>REALSAD</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" type="text/css" media="screen" href="/main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 </head>
 <body>
   <div id="app"></div>
