--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>STRANGE ISLANDS ONLINE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" type="text/css" media="screen" href="/main.css" />
-  <link rel="icon" href="sunny.png" type="image/x-icon"/>
-  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
+  <link rel="icon" href="sunny.png" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <div id="app"></div>
   <script src="/bundle.js"></script>
 </body>
+
 </html>
